--- a/admin/css/site.css
+++ b/admin/css/site.css
@@ -109,3 +109,7 @@ a.desc:after {
 .nav > li > form > button:hover {
     text-decoration: none;
 }
+
+.service-form .thumbnail{
+    background-color: grey;
+}
