--- a/www/css/style.css
+++ b/www/css/style.css
@@ -667,6 +667,24 @@ margin: 0;
     margin: 0;
 }
 
+.realty .img-thumbnail{
+    height: 50px;
+    width: 50px;
+}
+
+.realty .newPrice{
+    color: green;
+    font-size: 2.5rem;
+    margin: 0;
+}
+.realty .oldPrice{
+    color: red;
+    font-size: 2rem;
+    text-decoration: line-through;
+    margin: 0;
+    padding-top: 10px;
+}
+
 #map-box #map {
     height: 100%;
     position: relative;
@@ -794,6 +812,7 @@ margin: 0;
 .action-ico{
     position: absolute;
     top: 50px;
+    left: 10px;
     width: 40px;
     height: 40px;
     z-index: 400;
